java 21 fix